Update evolving-ideas built docs trivox-io/evolving-ideas@97932bc8cad852a8f02ba7f8ac94cbfd622d1389

--- a/evolving-ideas/backlog.html
+++ b/evolving-ideas/backlog.html
@@ -402,8 +402,8 @@
 <ul class="simple">
 <li><p>[ ] Auto-version bump and changelog on PRs to <code class="docutils literal notranslate"><span class="pre">main</span></code></p></li>
 <li><p>[x] Auto-generate markdown docs from docstrings (<code class="docutils literal notranslate"><span class="pre">mkdocs</span></code> or similar)</p></li>
-<li><p>[ ] Auto-run format/lint/test pipeline locally on commit</p></li>
-<li><p>[ ] Pre-commit hooks: <code class="docutils literal notranslate"><span class="pre">black</span></code>, <code class="docutils literal notranslate"><span class="pre">pylint</span></code>, <code class="docutils literal notranslate"><span class="pre">isort</span></code>, <code class="docutils literal notranslate"><span class="pre">pytest</span></code></p></li>
+<li><p>[x] Auto-run format/lint/test pipeline locally on commit</p></li>
+<li><p>[x] Pre-commit hooks: <code class="docutils literal notranslate"><span class="pre">black</span></code>, <code class="docutils literal notranslate"><span class="pre">pylint</span></code>, <code class="docutils literal notranslate"><span class="pre">isort</span></code>, <code class="docutils literal notranslate"><span class="pre">pytest</span></code></p></li>
 <li><p>[ ] CLI diagnostics (<code class="docutils literal notranslate"><span class="pre">evolving-ideas</span> <span class="pre">doctor</span></code>)</p></li>
 <li><p>[ ] Cross-platform config dir support (<code class="docutils literal notranslate"><span class="pre">~/.config/</span></code>, <code class="docutils literal notranslate"><span class="pre">%APPDATA%/</span></code>, etc.)</p></li>
 <li><p>[ ] Poetry migration + dev-friendly config in <code class="docutils literal notranslate"><span class="pre">pyproject.toml</span></code></p></li>
