Update evolving-ideas built docs trivox-io/evolving-ideas@5af372b71686dccefc403133a6262c98852acb8b

--- a/evolving-ideas/genindex.html
+++ b/evolving-ideas/genindex.html
@@ -1129,12 +1129,18 @@
 </li>
         <li><a href="autoapi/evolving_ideas/settings/index.html#evolving_ideas.settings.Settings">Settings (class in evolving_ideas.settings)</a>
 </li>
-        <li><a href="autoapi/evolving_ideas/settings/index.html#evolving_ideas.settings.settings">settings (in module evolving_ideas.settings)</a>
+        <li><a href="autoapi/evolving_ideas/app/index.html#evolving_ideas.app.SettingsApp.settings">settings (evolving_ideas.app.SettingsApp attribute)</a>
+
+        <ul>
+          <li><a href="autoapi/evolving_ideas/settings/index.html#evolving_ideas.settings.settings">(in module evolving_ideas.settings)</a>
 </li>
-        <li><a href="autoapi/evolving_ideas/common/logger/index.html#evolving_ideas.common.logger.setup_logging">setup_logging() (in module evolving_ideas.common.logger)</a>
+        </ul></li>
+        <li><a href="autoapi/evolving_ideas/app/index.html#evolving_ideas.app.SettingsApp">SettingsApp (class in evolving_ideas.app)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="autoapi/evolving_ideas/common/logger/index.html#evolving_ideas.common.logger.setup_logging">setup_logging() (in module evolving_ideas.common.logger)</a>
+</li>
         <li><a href="autoapi/evolving_ideas/domain/services/idea_tree/index.html#evolving_ideas.domain.services.idea_tree.IdeaTree.show_tree">show_tree() (evolving_ideas.domain.services.idea_tree.IdeaTree method)</a>
 </li>
         <li><a href="autoapi/evolving_ideas/strategies/six_hats/index.html#evolving_ideas.strategies.six_hats.SixHatsMethod">SixHatsMethod (class in evolving_ideas.strategies.six_hats)</a>
@@ -1228,6 +1234,8 @@
         <li><a href="autoapi/evolving_ideas/cli/index.html#evolving_ideas.cli.VERSION">VERSION (in module evolving_ideas.cli)</a>
 </li>
         <li><a href="autoapi/evolving_ideas/domain/services/idea_tree/index.html#evolving_ideas.domain.services.idea_tree.IdeaTree.versions">versions (evolving_ideas.domain.services.idea_tree.IdeaTree attribute)</a>
+</li>
+        <li><a href="autoapi/evolving_ideas/app/index.html#evolving_ideas.app.SettingsApp.view">view() (evolving_ideas.app.SettingsApp method)</a>
 </li>
     </ul></td>
   </tr></table>
